Fixed classloader bug when spaces in the path